fixed position for leaflet container on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -515,6 +515,8 @@ margin-left:25%;
 @media (min-width: 624px) {
 .leafletContainer {
   height: 400px;
+  top: 100px;
+  position: absolute;
 }
 }
 
@@ -615,66 +617,3 @@ font-size: 14px;
 
 
 
-// Home Page
-
-
-
-
-/* flipY class and keyframes*/
-.flipY {
-animation-name: spin, depth;
-animation-timing-function: linear;
-animation-iteration-count: infinite;
-animation-duration: 12s;
-color: rgb(0, 0, 0);
-}
-@keyframes spin {
-0% {
-  transform: rotateY(0deg);
-}
-100% {
-  transform: rotateY(-360deg);
-}
-}
-
-
-
-// menu button
-
-.btn-three {
-color: #FFF;
-transition: all 0.5s;
-position: relative;
-}
-.btn-three::before {
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-z-index: 1;
-background-color: rgba(255,255,255,0.1);
-transition: all 0.3s;
-}
-.btn-three:hover::before {
-opacity: 0 ;
-transform: scale(0.5,0.5);
-}
-.btn-three::after {
-content: '';
-position: absolute;
-top: 0;
-left: 0;
-width: 100%;
-height: 100%;
-z-index: 1;
-opacity: 0;
-transition: all 0.3s;
-border: 1px solid rgba(255,255,255,0.5);
-transform: scale(1.2,1.2);
-}
-.btn-three:hover::after {
-opacity: 1;
-transform: scale(1,1);
-}
